# gbr-protocol

./: .commit_msg  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROFILE.md  README.md  SPECIFICATION.md  VERSIONING.md  grimoire.code-workspace  profile-descriptor.json
conformance/invalid/: invalid_canonical_summary.expected.json  invalid_canonical_summary.json  missing_scene_id.expected.json  missing_scene_id.json  unknown_enum_value.expected.json  unknown_enum_value.json  unresolved_entity_ref.expected.json  unresolved_entity_ref.json
conformance/valid/: full_scene.json  minimal_registry.json  minimal_scene.json  minimal_story.json
docs/: CORE_ONTOLOGY_DRAFT.md  GBR_FIELD_AUDIT.md  NARRATIVE_PROFILE_MAPPING.md  design-principles.md  terminology.md  training-pipeline.md
docs/decisions/: ADR-001-scene-as-atomic-unit.md  ADR-002-canonical-summary.md  ADR-003-enum-based-semantics.md  ADR-004-lossless-round-trip.md  ADR-005-fabula-syuzhet-separation.md  ADR-006-observable-structure-interpretation.md  ADR-007-sip-extraction.md
enums/: README.md  character.json  emotion_psychology.json  literary_theory.json  narrative_time.json  narrative_voice.json  relationship.json  scene_structure.json  setting.json
examples/edge-cases/: README.md  analepsis_within_analepsis.json  dual_pov_split.json  flat_arc_focalizer.json  iterative_scene.json  non_present_character.json  omniscient_multiple_focalizer.json
examples/minimal/: character-state.json  registry.json  scene-card.json  story-architecture.json
gbr-research/: README.md
gbr-research/experiments/: README.md
gbr-research/papers/: README.md
gbr-research/theory/: THEORY.md
gbr-research/training/: README.md
grimoire-tooling/: Cargo.toml  README.md
grimoire-tooling/src/: dag.rs  gates.rs  lib.rs  python.rs  recipe.rs  training.rs
grimoire-types/: Cargo.toml
grimoire-types/src/: lib.rs
protocol/: architecture.md  canonical-summary.md  character-state.md  entity-registry.md  scene-card.md  story-architecture.md
reference/python/: README.md  gbr_validate.py
reference/rust/: Cargo.toml  README.md
reference/rust/src/: catalogs.rs  constraints.rs  corpus.rs  entities.rs  enums.rs  lib.rs  ontology.rs  overlay.rs  tags.rs  validate_narrative.rs  views.rs  voice.rs
schemas/: character-state.schema.json  enums.schema.json  registry.schema.json  scene-card.schema.json  story-architecture.schema.json
schemas/profile/: narrative-context.schema.json  narrative-craft-targets.schema.json  narrative-entity-character.schema.json  narrative-entity-location.schema.json  narrative-grouping.schema.json  narrative-participant-state.schema.json  narrative-profile-manifest.json  narrative-prose-analysis.schema.json  narrative-relationship.schema.json  narrative-representation-audit.schema.json  narrative-story-architecture.schema.json  narrative-unit-interpretations.schema.json
scripts/: validate_against_schema.py
template-schemas/: README.md  _base.schema.json  _generated.schema.json
template-schemas/00-start-here/: author-journal.schema.json  book-brief.schema.json
template-schemas/01-concept/: comparable-titles.schema.json  genre-and-audience.schema.json  genre-pattern-audit.schema.json  intertextuality-map.schema.json  plot-type-selection.schema.json  premise-and-logline.schema.json  theme-exploration.schema.json
template-schemas/02-collision/: collision-pattern-selection.schema.json  inciting-incident-selection.schema.json  social-circles.schema.json
template-schemas/04-world-building/: culture-and-society.schema.json  history-and-timeline.schema.json  motif-and-symbol-tracker.schema.json  sensory-palette.schema.json  setting-profile.schema.json  spatial-semantics.schema.json  world-rules.schema.json
template-schemas/05-plot-and-structure/: seriality-and-series-craft.schema.json
template-schemas/06-scenes/: climax-and-resolution.schema.json  endings-and-denouement.schema.json  opening-hook.schema.json  scene-sequence-planner.schema.json  scene-template.schema.json
(+110 files in other folders)
