[package]
name = "grimoire-types"
version = "0.1.0"
edition = "2021"
description = "Backward-compatible facade re-exporting gbr-types and grimoire-tooling"
license = "MIT"

# This crate is a backward-compatibility shim. New code should depend on
# either `gbr-types` (protocol-core only) or `grimoire-tooling` (full stack).
# This crate re-exports both so that existing code using `grimoire_types::`
# continues to work without changes.

[lib]
name = "grimoire_types"
crate-type = ["rlib"]

[dependencies]
gbr-types = { path = "../reference/rust" }
grimoire-tooling = { path = "../grimoire-tooling" }

[features]
default = []
python = ["grimoire-tooling/python"]

[dev-dependencies]
pretty_assertions = "1"

